# ClockRadio

./: CMakeLists.txt  QClock.cpp  QClock.h  QDigitClock.cpp  QDigitClock.h  QSoundSource.cpp  QSoundSource.h  README.md  logview.cpp  logview.h  main.cpp  mainwindow.cpp  mainwindow.h  resource.qrc
ext/: ffmpeg_compile_windows_msvc_dynamic.sh  ffmpeg_compile_windows_msvc_static.bat  ffmpeg_prerequest_install.sh
ext/ffmpeg-android/arm64-v8a/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
ext/ffmpeg/include/libavutil/: ffversion.h
ext/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
ext/ffmpeg/share/man/man1/: ffmpeg-all.1  ffmpeg-codecs.1  ffmpeg-filters.1  ffmpeg-formats.1  ffmpeg.1  ffprobe-all.1
